tests/snapshots/replace_mode_test__5r_middle_of_line.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:6
Lines: 1

Buffer:
hello [w]orld test
