tests/snapshots/replace_mode_test__R_at_end_extends_line.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:2
Lines: 1

Buffer:
he[l]
