tests/snapshots/replace_mode_test__R_empty_line.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:5
Lines: 3

Buffer:
hello

worln[e]d
