tests/snapshots/replace_mode_test__R_longer_than_original.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:5
Lines: 3

Buffer:
hi
 worl[d]
