tests/snapshots/replace_mode_test__R_on_single_char.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 3

Buffer:
x
[ ]
