tests/snapshots/replace_mode_test__R_replace_entire_word.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:4
Lines: 3

Buffer:
hello world
odby[e]
