tests/snapshots/replace_mode_test__R_replace_tab.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 2

Buffer:
[ ]
hello	world
