tests/snapshots/replace_mode_test__R_stays_on_line.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 3

Buffer:
[ ]
hello
world
