tests/snapshots/replace_mode_test__R_with_arrow_keys.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:1
Lines: 1

Buffer:
h[X]ello world
